--- a/css/style.css
+++ b/css/style.css
@@ -45,21 +45,20 @@ a {
 .nav {
   background-color: rgba(250, 250, 250, 0.15);
   position: fixed;
-  z-index: 33;
+  z-index: 6000;
   width: 100%;
 }
 .nav .container {
   display: flex;
   justify-content: space-between;
   color: white;
-
   align-items: center;
   min-height: 100px;
 }
 .nav .logo {
   display: flex;
   align-items: center;
-  color: white ;
+  color: white;
   font-weight: 900;
   font-size: 28px;
 }
@@ -142,18 +141,35 @@ a {
   display: block;
   top: 100%;
 }
-.stiky{
+.stiky {
   background-color: white;
 }
 .stiky .navlink {
   color: var(--main-text-color) !important;
 }
-.stiky .logo{
-  color: var(--main-text-color) ;
+.stiky .logo {
+  color: var(--main-text-color);
 }
-
+@keyframes show-nav {
+  0% {
+    top: 30px;
+    opacity: 0.8;
+  }
+  100% {
+    top: 0px;
+    opacity: 1;
+  }
+}
+@keyframes show-nav-0px {
+  0% {
+    top: -10px;
+  }
+  100% {
+    top: 0px;
+  }
+}
 @media (max-width: 465px) {
-  .nav .container{
+  .nav .container {
     flex-direction: row !important;
   }
   .nav .icon {
@@ -181,12 +197,10 @@ a {
     background-color: white;
     padding: 10px 0px;
   }
-
   .nav .navlink {
     color: var(--main-text-color) !important;
     padding: 0px;
   }
-
   .nav .pages_hover {
     width: 100%;
     box-shadow: none;
@@ -198,6 +212,9 @@ a {
     overflow: hidden;
   }
 }
+.parent {
+  position: relative;
+}
 .pre-next {
   display: flex;
   justify-content: space-between;
@@ -207,6 +224,11 @@ a {
   width: 100%;
   transform: translateY(-50%);
   z-index: 333;
+}
+@media (max-width: 991px) {
+  .pre-next {
+    display: none;
+  }
 }
 .pre-next .next,
 .pre {
@@ -234,6 +256,7 @@ a {
 .pre-next .pre {
   margin-left: -25px;
 }
+/* end gloable rules */
 /* start header */
 .header {
   height: 100vh;
@@ -253,7 +276,6 @@ a {
   object-fit: cover;
 }
 
-
 .header .container .text {
   position: absolute;
   top: 50%;
@@ -261,13 +283,13 @@ a {
   width: 50%;
   color: white;
 }
-@media (max-width:991px) {
-  .nav .container{
+@media (max-width: 991px) {
+  .nav .container {
     flex-direction: column;
     padding-top: 10px;
   }
-  .header .container .text{
- width: auto;
+  .header .container .text {
+    width: auto;
   }
 }
 .header .container .text p {
@@ -280,13 +302,13 @@ a {
 }
 .header .container .text a {
   color: aquamarine;
-  transition: 0.3s;
+  transition: var(--main-transation);
 }
 .header .container .text a:hover {
-  color: var(--main-link-hover) ;
+  color: var(--main-link-hover);
 }
 .header .container .text div {
-  font-size: 20px;
+  font-size: 13px;
   line-height: 1.5;
   letter-spacing: 1px;
 }
@@ -310,8 +332,12 @@ a {
 }
 .coming_meeting .container .info {
   display: flex;
-  position: relative;
+  justify-content: space-between;
   overflow: hidden;
+  position: relative;
+}
+.coming_meeting .container .parent {
+  top: -130px;
 }
 .coming_meeting .container .info .box {
   background-image: url(../images/service-item-bg.jpg);
@@ -319,8 +345,24 @@ a {
   background-repeat: no-repeat;
   padding: 40px;
   border-radius: 16px;
-  min-width: 313px;
-  transition: 3s;
+  min-width: calc(97% / 4);
+  margin-right: 10px;
+  transition: var(--main-transation);
+  max-height: 280px;
+}
+@media (max-width: 991px) {
+  .coming_meeting .container .info {
+    top: 0px;
+  }
+  .coming_meeting .container .info .box {
+    min-width: calc(98% / 2);
+    margin-right: 10px;
+  }
+}
+@media (max-width: 465px) {
+  .coming_meeting .container .info .box {
+    min-width: 100%;
+  }
 }
 .coming_meeting .container .info .box .image {
   text-align: center;
@@ -329,7 +371,7 @@ a {
   color: white;
 }
 .coming_meeting .container .info .box .text p {
-  font-size: 13px;
+  font-size: 12px;
 }
 .coming_meeting_text {
   text-align: center;
@@ -553,6 +595,12 @@ a {
   background-size: cover;
   background-attachment: fixed;
 }
+.popular-courses .image {
+  overflow: hidden;
+}
+.popular-courses .image img {
+  width: 100%;
+}
 .popular-courses .container {
   padding-top: 100px;
   padding-bottom: 150px;
@@ -566,11 +614,12 @@ a {
 }
 .popular-courses .content {
   display: flex;
-  position: relative;
+  justify-content: space-between;
   overflow: hidden;
 }
 .popular-courses .content .box {
   background-color: white;
+  width: calc(98% / 4);
 }
 .popular-courses .content .box .text {
   padding: 30px;
@@ -594,12 +643,23 @@ a {
   font-size: 18px;
   font-weight: bold;
 }
+@media (max-width: 991px) {
+  .popular-courses .content .box {
+    min-width: calc(99% / 2);
+    margin-right: 20px;
+  }
+}
+@media (max-width: 465px) {
+  .popular-courses .content .box {
+    min-width: 100%;
+  }
+}
 /* about */
 .about {
   background-image: url(../images/facts-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
-  padding-bottom: 100px;
+  padding: 100px 0px;
 }
 .about .container {
   display: flex;
@@ -621,6 +681,7 @@ a {
 .about .container .BOX .content {
   align-items: center;
 }
+
 .about .container .BOX .content .box {
   flex-basis: 47%;
 }
@@ -631,12 +692,25 @@ a {
   text-align: center;
   border-radius: 20px;
 }
+@media (min-width: 991px) {
+  .about .container .BOX .content {
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 49%;
+  }
+  .about .container .BOX .content .box:last-child {
+    margin-top: 50px;
+  }
+  .about .container .BOX .content .box div {
+    margin-bottom: 30px;
+  }
+}
 .about .container .BOX .content .box div span {
   color: var(--main-link-hover);
   font-size: 36px;
   font-weight: bold;
 }
-.about .container .BOX .content .box .present::after{
+.about .container .BOX .content .box .present::after {
   content: "%";
 }
 .about .container .BOX .content .box div p {
@@ -684,7 +758,8 @@ a {
   background-attachment: fixed;
 }
 .contact-us .container {
-  padding: 120px 0px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .contact-us .box1 {
   margin-bottom: 30px;
@@ -934,7 +1009,6 @@ a {
   align-items: center;
   padding: 50px;
 }
-
 .details .filtering div {
   margin: 7px 5px;
   text-transform: uppercase;
@@ -972,7 +1046,7 @@ a {
   overflow: hidden;
 }
 .details .box .image img {
-  width: 100%; 
+  width: 100%;
 }
 .details .box .image .price {
   position: absolute;
@@ -1042,6 +1116,3 @@ a {
     flex-basis: 100%;
   }
 }
-
-
-
